# posts-service

./: .dev.env  .env  Cargo.toml  Containerfile.dev  README.md  compose.dev.yaml
.devcontainer/: compose.dev.yaml  devcontainer.json
.devcontainer/default/: devcontainer.json
.devcontainer/host/: devcontainer.json
.github/: REPOSITORY_SETUP.md
.github/workflows/: README.md  docker-manual-build.yml  docker-publish.yml  docker-test-builds.yml
container/: Containerfile  Containerfile.entities  Containerfile.migration
entities/: Cargo.toml
entities/src/: .gitignore  lib.rs  main.rs  post_tags.rs  posts.rs  prelude.rs  sea_orm_active_enums.rs  tags.rs  users.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs  main.rs
src/: config.rs  main.rs
src/auth/: mod.rs
src/connections/: mod.rs  object_storage.rs
src/connectors/: mod.rs  object_storage.rs
src/routes/: mod.rs  posts.rs
src/setup/: kafka.rs  mod.rs
