[package]
name = "entities"
version = "0.1.0"
edition = "2024"

[dependencies]
pathdiff = "0.2.3"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid" ] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }

poem-openapi = { version = "5", features = ["chrono"]}